--- a/style.css
+++ b/style.css
@@ -1,18 +1,33 @@
 body {
     max-width: 80em;
-    padding: 0 20px;
+    padding: 20px 20px;
     margin: 1em auto 1em;
     margin-top: 6e;
     position: relative;
     box-shadow: 0 .3em 1em #000;
 }
 img {
-    max-width: 300p x;
+    max-width: 100%;
+    height: auto;
     display: block;
     margin: auto;
-    width: 50%;
 }
 .main {
     border-top: 2px;
     text-align: center;
+}
+.main p {
+    font-size: large;
+}
+.vidjo {
+    max-width: 100%;
+    height: 315px auto;
+    display: block;
+    margin: auto;
+}
+.kort {
+    max-width: 100%;
+    height: 315px auto;
+    display: block;
+    margin: auto;    
 }
