--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     max-width: 80em;
     padding: 20px 20px;
     margin: 1em auto 1em;
-    margin-top: 6e;
+    margin-top: 6em;
     position: relative;
     box-shadow: 0 .3em 1em #000;
 }
